--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -16,28 +16,18 @@
                     </div>
                     <div>
                         <div class="ibox-content no-padding border-left-right">
-                            <img alt="image" class="img-responsive" src="../img/profile.jpg">
+                            <img alt="image" class="img-responsive" style="height: 20%; padding: 5%" src="../img/silva.jpg">
                         </div>
                         <div class="ibox-content profile-content">
-                            <h4><strong>Monica Smith</strong></h4>
-                            <p><i class="fa fa-map-marker"></i> Riviera State 32/106</p>
+                            <h4><strong>Carlos Silva</strong></h4>
+                            <p><i class="fa fa-map-marker"></i> Porto, Portugal</p>
                             <h5>
-                                About me
+                                About me:
                             </h5>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitat.
+                                Back in Syria, I was a butcher. I ran my family-owned store, but unfortunate circumstances
+                                forced me to leave my beloved hometown. I am a hardworking man, trying to fit in such a beautiful country as is Portugal.
                             </p>
-                            <div class="row m-t-lg">
-                                <div class="col-md-4">
-                                    <h5><strong>169</strong> Posts</h5>
-                                </div>
-                                <div class="col-md-4">
-                                    <h5><strong>28</strong> Following</h5>
-                                </div>
-                                <div class="col-md-4">
-                                    <h5><strong>240</strong> Followers</h5>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -56,16 +46,16 @@
                     <div class="ibox-content">
                         <div class="animated fadeInRight">
                             <ul class="sortable-list connectList agile-list">
-                                <li class="info-element">Simply dummy text of the printing and typesetting industry.
+                                <li class="info-element">I can translate Arabic documents to English. I will be glad to help!
                                     <div class="row">
                                         <div class="agile-detail col-lg-2">
-                                            <strong>AUTOR</strong>
+                                            <strong>carlos_silva</strong>
                                         </div>
                                         <div class="agile-detail col-lg-3">
-                                            <i class="fa fa-clock-o"></i> DATA
+                                            <i class="fa fa-clock-o"></i> 6/25/2017
                                         </div>
                                         <div class="agile-detail col-lg-4">
-                                            <i class="fa fa-map-marker"></i> LOCALIZACAO
+                                            <i class="fa fa-map-marker"></i> Porto
                                         </div>
                                     </div>
                                 </li>
@@ -87,16 +77,16 @@
                     <div class="ibox-content">
                         <div class="animated fadeInRight">
                             <ul class="sortable-list connectList agile-list" id="todo">
-                                <li class="success-element" id="task1">Simply dummy text of the printing and typesetting industry.
+                                <li class="success-element" id="task1">Im looking for a someone to explain to me the legal process of opening a personal shop here in Portugal.
                                     <div class="row">
                                         <div class="agile-detail col-lg-2">
-                                            <strong>AUTOR</strong>
+                                            <strong>carlos_silva</strong>
                                         </div>
                                         <div class="agile-detail col-lg-3">
-                                            <i class="fa fa-clock-o"></i> DATA
+                                            <i class="fa fa-clock-o"></i> 27/06/2017
                                         </div>
                                         <div class="agile-detail col-lg-4">
-                                            <i class="fa fa-map-marker"></i> LOCALIZACAO
+                                            <i class="fa fa-map-marker"></i> Porto
                                         </div>
                                     </div>
                                 </li>
@@ -135,47 +125,11 @@
                                     <table class="table table-hover table-mail">
                                         <tbody>
                                         <tr class="unread">
-                                            <td class="mail-ontact"><a href="mail_detail.html">Anna Smith</a></td>
-                                            <td class="mail-subject"><a href="mail_detail.html"><strong>Ie of Lorem</strong></a></td>
-                                            <td class="mail-subject"><a href="mail_detail.html"><i>If yoLorem</i> </a></td>
-                                            <td class="mail-date">6.10</td>
+                                            <td class="mail-ontact"><a href="mail_detail.html">Júlia Gonçalves</a></td>
+                                            <td class="mail-subject"><a href="mail_detail.html">I can teach you about the process of creating a small business. Contact me!</a></td>
+                                            <td class="mail-date">25/06</td>
                                         </tr>
-                                        <tr class="unread">
-                                            <td class="mail-ontact"><a href="mail_detail.html">Jack Nowak</a></td>
-                                            <td class="mail-subject"><a href="mail_detail.html"><strong>If ge of Lorem</strong></a></td>
-                                            <td class="mail-subject"><a href="mail_detail.html"><i>If you a Lorem</i> </a></td>
-                                            <td class="mail-date">20.22</td>
-                                        </tr>
-                                        <tr class="read">
-                                            <td class="mail-ontact"><a href="mail_detail.html">Mailchip</a></td>
-                                            <td class="mail-subject"><a href="mail_detail.html"><strong>Ifage of Lorem</strong></a></td>
-                                            <td class="mail-subject"><a href="mail_detail.html"><i>If youf Lorem</i> </a></td>
-                                            <td class="mail-date">Mar 22</td>
-                                        </tr>
-                                        <tr class="read">
-                                            <td class="mail-ontact"><a href="mail_detail.html">Alex T.</a></td>
-                                            <td class="mail-subject"><a href="mail_detail.html"><strong>If passage of Lorem</strong></a></td>
-                                            <td class="mail-subject"><a href="mail_detail.html"><i>If youage of Lorem</i> </a></td>
-                                            <td class="mail-date">Dec 22</td>
-                                        </tr>
-                                        <tr class="read">
-                                            <td class="mail-ontact"><a href="mail_detail.html">Monica Ryther</a></td>
-                                            <td class="mail-subject"><a href="mail_detail.html"><strong>If yo passage of Lorem</strong></a></td>
-                                            <td class="mail-subject"><a href="mail_detail.html"><i>If you areage of Lorem</i> </a></td>
-                                            <td class="mail-date">Jun 12</td>
-                                        </tr>
-                                        <tr class="read">
-                                            <td class="mail-ontact"><a href="mail_detail.html">Sandra Derick</a></td>
-                                            <td class="mail-subject"><a href="mail_detail.html"><strong>If you are gorem</strong></a></td>
-                                            <td class="mail-subject"><a href="mail_detail.html"><i>If you arngassage of Lorem</i> </a></td>
-                                            <td class="mail-date">May 28</td>
-                                        </tr>
-                                        <tr class="read">
-                                            <td class="mail-ontact"><a href="mail_detail.html">Patrick Pertners</a></td>
-                                            <td class="mail-subject"><a href="mail_detail.html"><strong>Ife of Lorem</strong></a></td>
-                                            <td class="mail-subject"><a href="mail_detail.html"><i>If you Lorem</i> </a></td>
-                                            <td class="mail-date">May 28</td>
-                                        </tr>
+
                                         </tbody>
                                     </table>
                                 </div>
